@@ -31,6 +31,8 @@
   analysis classes.
 - Change: Empty configuration sections are not rendered anymore.
 - Change: Always allow a none rendering of configuration settings.
+- Change: Streamlined the return type of the
+  retrieveDeclaringReflection of class methods.
 
 4.1.5
 - Bugfix: Unnecessary uri encoding in the smoky grey skin prevents
